--- a/package.json
+++ b/package.json
@@ -74,7 +74,11 @@
     "react-ionicons": "^2.1.6",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "redux": "4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "yarn": "^1.12.3"
   },
